# conda-hint

./: README.rst  requirements.txt  setup.cfg
conda_hint/: __init__.py
