[metadata]
name = conda-hint
home-page = https://github.com/rmcgibbo/conda-hint
license = MIT
author = Robert T. McGibbon
author-email = rmcgibbo@gmail.com
summary = conda-hint
description-file = README.rst
classifier =
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Topic :: Utilities
platform = any
keywords =
	conda

[pbr]
skip_changelog = 1

[files]
packages = conda_hint

[entry_points]
console_scripts =
    conda-hint = conda_hint:main